--- a/CarInsuranceQuotes/CarInsuranceQuotes/CarInsuranceQuotes.csproj
+++ b/CarInsuranceQuotes/CarInsuranceQuotes/CarInsuranceQuotes.csproj
@@ -137,6 +137,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Models\Age.cs" />
     <Compile Include="Models\CarInsuranceQuote.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -160,7 +161,6 @@
     <Compile Include="Models\QuoteVariable.cs">
       <DependentUpon>CarInsuranceQuote.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\QuoteProperties.cs" />
     <Compile Include="ViewModels\QuoteVm.cs" />
   </ItemGroup>
   <ItemGroup>
